--- a/css/style.css
+++ b/css/style.css
@@ -3183,6 +3183,7 @@ nav ul li a{
   color: #000000;
   text-decoration: none;
   font-size: 18px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 500;
   padding: 8px 15px;
   border-radius: 5px;
