--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ select {
 [list]::-webkit-calendar-picker-indicator {
   display: none; }
 
-button,
+/* button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
@@ -248,7 +248,7 @@ button,
   [type="button"]:not(:disabled),
   [type="reset"]:not(:disabled),
   [type="submit"]:not(:disabled) {
-    cursor: pointer; }
+    cursor: pointer; } */
 
 textarea {
   resize: vertical; }
