--- a/css/style.css
+++ b/css/style.css
@@ -3259,7 +3259,8 @@ input[type="checkbox"]{
 }
 @media (max-width: 768px) {
   .choose-icon {
-   height: 25px; margin-bottom: 5%; margin-top: 2%;
+   height: 35px; margin-bottom: 5%; margin-top: 2%;
+   color: #000000;
   } }
 .msg{
   font-size: 15px;
