--- a/css/style.css
+++ b/css/style.css
@@ -2383,16 +2383,16 @@ background: linear-gradient(90deg, rgba(14,36,82,1) 42%, rgba(14,36,82,1) 46%, r
 
 .ftco-footer {
   padding: 5em 0 0 0;
-  background: #eeeeee; }
+  background: #000000; }
   .ftco-footer .logo a {
     position: relative;
     text-decoration: none;
-    color: #111111;
+    color: #ffffff;
     font-size: 30px; }
     .ftco-footer .logo a span {
-      color: #2b2a2a; }
+      color: #d4d4d4; }
   .ftco-footer .ftco-footer-widget h2, .ftco-footer .ftco-footer-widget .h2 {
-    color: #111111;
+    color: #ffffff;
     margin-bottom: 40px;
     font-size: 18px;
     font-weight: 500;
@@ -2400,14 +2400,14 @@ background: linear-gradient(90deg, rgba(14,36,82,1) 42%, rgba(14,36,82,1) 46%, r
   .ftco-footer .ftco-footer-widget ul li {
     margin-bottom: 10px; }
     .ftco-footer .ftco-footer-widget ul li a {
-      color: #666666; }
+      color: #e1e1e1; }
       .ftco-footer .ftco-footer-widget ul li a span {
         font-size: 14px;
-        color: #2b2a2a; }
+        color: #ffffff; }
       .ftco-footer .ftco-footer-widget ul li a:hover {
-        color: #2b2a2a; }
+        color: #ebebeb; }
         .ftco-footer .ftco-footer-widget ul li a:hover span {
-          color: #2b2a2a; }
+          color: #ffffff; }
   .ftco-footer .ftco-footer-widget .btn-primary {
     background: #fff !important;
     border: 2px solid #fff !important; }
@@ -2424,19 +2424,19 @@ background: linear-gradient(90deg, rgba(14,36,82,1) 42%, rgba(14,36,82,1) 46%, r
         margin-bottom: 15px;
         font-size: 15px; }
       .ftco-footer .block-23 ul li span {
-        color: rgba(0, 0, 0, 0.7);
-        color: #2b2a2a; }
+        color: rgb(255, 255, 255);
+        color: #ffffff; }
       .ftco-footer .block-23 ul li .icon, .ftco-footer .block-23 ul li .text {
         display: table-cell;
         vertical-align: top;
-        color: rgba(0, 0, 0, 0.8) !important; }
+        color: rgba(255, 255, 255, 0.8) !important; }
       .ftco-footer .block-23 ul li .icon {
         width: 40px;
         font-size: 15px;
         padding-top: 2px;
-        color: #2b2a2a !important; }
+        color: #ffffff !important; }
   .ftco-footer .bg-darken {
-    background: #e9e9e9 !important; }
+    background: #ffffff !important; }
   .ftco-footer .block-21 .blog-img {
     display: block;
     height: 50px;
@@ -2449,16 +2449,16 @@ background: linear-gradient(90deg, rgba(14,36,82,1) 42%, rgba(14,36,82,1) 46%, r
       font-weight: 400;
       margin-bottom: 0; }
       .ftco-footer .block-21 .text .heading a {
-        color: #666666; }
+        color: #ffffff; }
         .ftco-footer .block-21 .text .heading a:hover, .ftco-footer .block-21 .text .heading a:active, .ftco-footer .block-21 .text .heading a:focus {
-          color: #2b2a2a; }
+          color: #ffffff; }
     .ftco-footer .block-21 .text .meta > div {
       display: inline-block;
       font-size: 12px;
       margin-right: 5px; }
       .ftco-footer .block-21 .text .meta > div a {
-        color: gray;
-        color: #2b2a2a; }
+        color: rgb(255, 255, 255);
+        color: #ffffff; }
 
 .ftco-footer-social li {
   list-style: none;
@@ -2468,10 +2468,10 @@ background: linear-gradient(90deg, rgba(14,36,82,1) 42%, rgba(14,36,82,1) 46%, r
     height: 40px;
     width: 40px;
     display: block;
-    color: #fff;
+    color: #000000;
     border-radius: 50%;
     position: relative;
-    background: #000000; }
+    background: #ffffff; }
     .ftco-footer-social li a span {
       position: absolute;
       font-size: 24px;
@@ -2480,9 +2480,9 @@ background: linear-gradient(90deg, rgba(14,36,82,1) 42%, rgba(14,36,82,1) 46%, r
       -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);
-      color: #fff !important; }
+      color: #000000 !important; }
     .ftco-footer-social li a:hover {
-      color: #fff !important; }
+      color: #000000 !important; }
 
 #map {
   background: url(../images/bg_3.jpg) no-repeat center;
@@ -2517,7 +2517,7 @@ background: linear-gradient(90deg, rgba(14,36,82,1) 42%, rgba(14,36,82,1) 46%, r
   font-size: 16px;
   display: block;
   margin-bottom: 5px;
-  color: #2b2a2a;
+  color: #121212;
   font-weight: 700;
   text-transform: uppercase; }
 
