--- a/css/style.css
+++ b/css/style.css
@@ -2028,7 +2028,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5,
   background: #f8f8f8 !important; }
 
 .bg-primary {
-  background:#4ba5d7 !important; }
+  background:#2553b5 !important; }
 
 .bg-darken {
   background: #111111 !important; }
