--- a/css/style.css
+++ b/css/style.css
@@ -2178,8 +2178,8 @@ textarea.form-control {
 
 .services-2 {
   width: 100%;
-  background: rgb(14,36,82);
-background: linear-gradient(90deg, rgba(14,36,82,1) 42%, rgba(14,36,82,1) 46%, rgba(14,36,82,1) 50%, rgba(10,31,75,1) 61%);
+  background-color: #29539b;
+background-image: linear-gradient(315deg, #29539b 0%, #1e3b70 74%);
   padding: 30px 20px;
   margin-bottom: 0;
   border-radius: 4px;
