--- a/css/style.css
+++ b/css/style.css
@@ -3166,7 +3166,7 @@ nav{
   display: flex;
   height: 80px;
   width: 100%;
-  background: #F2F3F2;
+  background: #ffffff;
   align-items: center;
   justify-content: space-between;
   padding: 0 50px 0 100px;
