--- a/css/style.css
+++ b/css/style.css
@@ -3328,3 +3328,28 @@ input[type="checkbox"]{
     }
   
   }
+
+  .responsive-button {
+    display: block;
+    margin: 0 auto;
+    padding: 10px 20px;
+    font-size: 13px;
+    background-color: #d1d106;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .responsive-button:hover {
+    background-color: #0056b3;
+  }
+  
+  @media (max-width: 767px) {
+    .responsive-button {
+      width: 100%;
+      text-align: center;
+    }
+  }
+  
