--- a/css/style.css
+++ b/css/style.css
@@ -1935,7 +1935,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5,
 
 .hero-wrap {
   height: 100vh;
-  min-height: 100%;
+  max-height: 100%;
   position: relative;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1959,13 +1959,19 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5,
     .hero-wrap.hero-wrap-2 .overlay {
       opacity: 0; }
     .hero-wrap.hero-wrap-2 .slider-text {
-      min-height: auto;
-      height: 700px; }
+      max-height: auto;
+      height: 600px; }
   .hero-wrap .slider-text {
     height: 100vh;
-    min-height: -5px;
+    max-height: 700px;
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-attachment: fixed;
     color: rgba(255, 255, 255, 0.8);
-    z-index: 3; }
+    z-index: 1; }
+    @media (max-width: 767.98px) {
+      .hero-wrap .slider-text h1, .hero-wrap .slider-text .h1 {
+        font-size: 27px; } }
     .hero-wrap .slider-text .text {
       position: relative;
       z-index: 0; }
