--- a/css/style.css
+++ b/css/style.css
@@ -2534,11 +2534,13 @@ background-image: linear-gradient(315deg, #29539b 0%, #1e3b70 74%);
   text-transform: uppercase; }
 
 .heading-section h2, .heading-section .h2 {
-  font-size: 46px;
+  font-size: 43px;
   font-weight: 500;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   line-height: 1.4; }
   @media (max-width: 991.98px) {
     .heading-section h2, .heading-section .h2 {
+      font-weight: 530;
       font-size: 40px; } }
 
 .img,
