--- a/css/style.css
+++ b/css/style.css
@@ -2540,6 +2540,7 @@ background-image: linear-gradient(315deg, #29539b 0%, #1e3b70 74%);
   line-height: 1.4; }
   @media (max-width: 991.98px) {
     .heading-section h2, .heading-section .h2 {
+      font-family: Georgia, 'Times New Roman', Times, serif;
       font-weight: 530;
       font-size: 40px; } }
 
