--- a/css/style.css
+++ b/css/style.css
@@ -210,12 +210,12 @@ label {
   color: #000;
   display: inline-block; }
 
-button {
+/* button {
   border-radius: 0; }
 
 button:focus {
   outline: dotted 1px;
-  outline: -webkit-focus-ring-color auto 5px; }
+  outline: -webkit-focus-ring-color auto 5px; } */
 
 input,
 button,
@@ -226,12 +226,12 @@ textarea {
   font-size: inherit;
   line-height: inherit; }
 
-button,
+/* button,
 select {
   text-transform: none; }
 
 [role="button"] {
-  cursor: pointer; }
+  cursor: pointer; } */
 
 select {
   word-wrap: normal; }
@@ -1730,7 +1730,7 @@ body {
   font-weight: 400;
   color: #605757; }
 
-/* a, button {
+a, button {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
@@ -1741,7 +1741,7 @@ body {
     color: #000000;
     outline: none !important;
     -webkit-box-shadow: none !important;
-    box-shadow: none !important; } */
+    box-shadow: none !important; }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5,
 .h1, .h2, .h3, .h4, .h5 {
