--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,17 @@ textarea {
       margin-top: -25px;
     }
   }
- 
+  @media (max-width: 767px) {
+    #logo-footer{
+      width: 300px;
+      margin-top: -230px;
+      margin-left: -60px;
+      height: 10px;
+     margin-bottom: 20px;
+      
+    }
+      
+    }
   @media (max-width: 767px) {
     .logo-footer{
       width: 300px;
@@ -2348,7 +2358,7 @@ background-image: linear-gradient(315deg, #29539b 0%, #1e3b70 74%);
   color: rgba(255, 255, 255, 0.8); }
   .ftco-intro h2, .ftco-intro .h2 {
     color: #fff;
-    font-size: 27px;
+    font-size: 28px;
     font-weight: 500; }
   .ftco-intro .subscribe-form {
     width: 100%; }
@@ -3272,11 +3282,14 @@ input[type="checkbox"]{
 .choose-icon{
   height: 55px; margin-bottom: 5%; margin-top: 2%;
   filter: brightness(0) invert(1) !important;
+  
 }
 @media (max-width: 768px) {
   .choose-icon {
    height: 45px; margin-bottom: 5%; margin-top: 2%;
- 
+ align-items: center;
+ justify-content: center;
+ display: flex;
   } }
   .course-icon{
     width: auto; 
