--- a/css/style.css
+++ b/css/style.css
@@ -2404,7 +2404,7 @@ background-image: linear-gradient(315deg, #29539b 0%, #1e3b70 74%);
 
 .ftco-footer {
   padding: 5em 0 0 0;
-  background: linear-gradient(109.6deg, rgb(0, 0, 0) 11.2%, rgb(0, 0, 0) 78.9%);
+  background: linear-gradient(109.6deg, rgb(27, 25, 25) 11.2%,rgb(27, 25, 25) 11.2%);
   }
   .ftco-footer .logo a {
     position: relative;
@@ -2420,11 +2420,12 @@ background-image: linear-gradient(315deg, #29539b 0%, #1e3b70 74%);
     font-weight: 500;
     font-family: "Roboto", Arial, sans-serif; }
   .ftco-footer .ftco-footer-widget ul li {
-    margin-bottom: 10px; }
+    margin-bottom: 5px; 
+    font-size: 13px;}
     .ftco-footer .ftco-footer-widget ul li a {
       color: #e1e1e1; }
       .ftco-footer .ftco-footer-widget ul li a span {
-        font-size: 14px;
+        font-size: 13px;
         color: #ffffff; }
       .ftco-footer .ftco-footer-widget ul li a:hover {
         color: #ebebeb; }
