--- a/css/style.css
+++ b/css/style.css
@@ -2423,29 +2423,30 @@ background-image: linear-gradient(315deg, #29539b 0%, #1e3b70 74%);
     margin-bottom: 5px; 
     font-size: 13px;}
     .ftco-footer .ftco-footer-widget ul li a {
-      color: #e1e1e1; }
+      font-size: 13px;
+      color: #ffffff; }
       .ftco-footer .ftco-footer-widget ul li a span {
         font-size: 13px;
         color: #ffffff; }
       .ftco-footer .ftco-footer-widget ul li a:hover {
-        color: #ebebeb; }
+        color: #ff0000; }
         .ftco-footer .ftco-footer-widget ul li a:hover span {
-          color: #ffffff; }
+          color: #ff0000; }
   .ftco-footer .ftco-footer-widget .btn-primary {
-    background: #fff !important;
-    border: 2px solid #fff !important; }
+    background: #ff0000 !important;
+    border: 2px solid #ff0000 !important; }
     .ftco-footer .ftco-footer-widget .btn-primary:hover {
-      background: #fff;
-      border: 2px solid #fff !important; }
+      background: #f30000;
+      border: 2px solid #ff0000 !important; }
   .ftco-footer .block-23 ul {
     padding: 0; }
     .ftco-footer .block-23 ul li {
-      font-size: 15px; }
+      font-size: 13px; }
       .ftco-footer .block-23 ul li, .ftco-footer .block-23 ul li > a {
         display: table;
         line-height: 1.5;
         margin-bottom: 10px;
-        font-size: 15px; }
+        font-size: 13px; }
       .ftco-footer .block-23 ul li span {
         color: rgb(255, 255, 255);
         color: #ffffff; }
@@ -2488,8 +2489,8 @@ background-image: linear-gradient(315deg, #29539b 0%, #1e3b70 74%);
   margin: 0 5px 0 0;
   display: inline-block; }
   .ftco-footer-social li a {
-    height: 40px;
-    width: 40px;
+    height: 35px;
+    width: 35px;
     display: block;
     color: #000000;
     border-radius: 50%;
@@ -2503,7 +2504,7 @@ background-image: linear-gradient(315deg, #29539b 0%, #1e3b70 74%);
       -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);
-      color: #000000 !important; }
+      color: #100aa6 !important; }
     .ftco-footer-social li a:hover {
       color: #000000 !important; }
 
